Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2211

SSL client connections hang and a aborted due to inactivity

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 4.1.2
    • HTTP, SSL
    • None

    Description

      Test setup:

      ATS in reverse proxy mode. Terminating SSL for clients, remap to non-SSL for origin. Origin delays 10s before sending any data (including headers), then dumps a non-chunked response (Content-Length) of about 3Mbytes.

      Over slow client connections, the client session freezes mid download (around 256k in my tests)... hangs until the inactivity timer fires and snips all the connections.

      Attachments

        Issue Links

          Activity

            People

              jesus Theo Schlossnagle
              jesus Theo Schlossnagle
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: