TS-2211: SSL client connections hang and a aborted due to inactivity